--- a/css/kernel_styles.css
+++ b/css/kernel_styles.css
@@ -1,1 +1,1 @@
-img{position:absolute;top:0;left:0;width:100%;height:100vh}/*# sourceMappingURL=kernel_styles.css.map */
+img{position:absolute;top:0;left:0;width:100%;height:100vh;object-fit:cover}/*# sourceMappingURL=kernel_styles.css.map */
